[package]
name = "countdown"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "countdown"
test = false
bench = false

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.3", features = ["derive"] }
itertools = "0.12.1"
thiserror = "1.0.58"
