[package]
name = "countdown"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "countdown"
test = false
bench = false

[[bin]]
name = "expr"
bench = false

[lib]
doctest = false

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.3", features = ["derive"] }
itertools = "0.12.1"
lazy_static = "1.4.0"
pest = "2.7.9"
pest_derive = "2.7.9"
thiserror = "1.0.58"
